--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+
 .App {
   text-align: center;
+}
+
+* {
+  font-family: 'Barlow';
+}
+
+body {
+  background-image: url("./images/background.png");
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  padding: 100px;
+}
+
+h2 {
+  color: white;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+p {
+  color: white;
+}
+
+.system {
+  display: flex;
+  align-items: center;
+}
+
+.card-planet {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 50px;
+}
+
+.missions-section {
+  background-color: black;
+  border-radius: 25px;
+  opacity: 0.6;
+  padding: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card-mission {
+  width: 100px;
+  padding: 30px;
+  background-color: gray;
+  border-color: white;
+  border-width: 10px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+.main-title-mission {
+  background-color: black;
+  opacity: 0.6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
